[package]
name = "collective-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Collective Resonator runtime - coordination, policy enforcement, and resource management"

[dependencies]
collective-types.workspace = true
rcf-types.workspace = true
rcf-commitment.workspace = true
resonator-types.workspace = true
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
