[package]
name = "eve-evaluation"
version.workspace = true
edition.workspace = true
description = "EVE Evaluation - Pattern analysis and learning"

[dependencies]
eve-types = { workspace = true }
rcf-types = { workspace = true }
rcf-commitment = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
