[package]
name = "maple-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MAPLE package build graph resolution and artifact assembly"
rust-version.workspace = true

[dependencies]
maple-crypto = { path = "../maple/crypto" }
maple-package = { path = "../maple-package" }
maple-package-format = { path = "../maple-package-format" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = { version = "1", features = ["serde"] }
petgraph = "0.6"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
