[package]
name = "maple-cli"
version.workspace = true
edition.workspace = true
description = "maple cli"

[[bin]]
name = "maple"
path = "src/main.rs"

[dependencies]
maple-integration = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
palm = { workspace = true }
maple-runtime = { version = "0.1.2", workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
ual-parser = { workspace = true }
ual-compiler = { workspace = true }
ual-types = { workspace = true }
rcf-validator = { workspace = true }
