[package]
name = "maple-fleet-instance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MAPLE Fleet Instance Manager — agent lifecycle engine for creating, running, monitoring, and stopping agent instances"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
dashmap = "5.5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
