[package]
name = "maple-fleet-stack"
description = "MAPLE Fleet Stack - Multi-service topology manager (docker-compose-like for agents)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
strict-docs = []

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Time
chrono = { workspace = true }

# IDs
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
